-Setting width on div for canvas causes right border of preview image to be truncated. Fixed but still need to get rid of extra width in generated image.

--- a/css/style.css
+++ b/css/style.css
@@ -297,8 +297,6 @@ table th {
 
 .canvasrow {
     position: relative;
-    left: 80px;
-    width: 600px;
 }
 #bannercanvas {
     position: relative;
